--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="logo">
-      <img class="logo-img" src="/assets/images/Vector.png" alt="logo">
+      <img class="logo-img" src="./assets/images/Vector.png" alt="logo">
       <h2>Encriptador de mensajes</h2>
     </div>
 
